--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-hdp {
+body {
     align-items: center;
+    align-self: center;
+    align-content: center;
+}
+div {
+    align-items: center;
+    align-self: center;
+    align-content: center;
+    text-align: center;
 }
