--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
 body{
-    margin:0;padding:0
+    margin:0;
+    padding:0;
+    align:center;
 }
 html{
+    align:center;
     background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/1.d25af17a.webp) 50%/cover no-repeat fixed
 }
 *{font-family:audiowideregular
 }
 center{
-    margin:0 auto
+    margin:0 auto;
+    align:center
 }
 .center{
+    align:center;
     text-align:center
 }
 .tint{
+    align:center;
     z-index:1;
     height:100%;
     width:100%;
@@ -24,22 +30,26 @@ center{
 }
 @font-face{
     font-family:audiowideregular;
-    src:url(font_latin-webfont.724c3a88.woff2)format("woff2"),url(font_latin-webfont.4347aa63.woff)format("woff");
+    src:url(https://mindustrygame.github.io/font_latin-webfont.724c3a88.woff2)format("woff2"),url(https://mindustrygame.github.io/font_latin-webfont.4347aa63.woff)format("woff");
     font-weight:400;
     font-style:normal
 }
 .header{
     filter:drop-shadow(5px 5px 5px #222);
-    width:600px
+    width:600px;
+    align:center
 }
 ul{
     margin:0;
     padding:0 20px;
     list-style-type:none;
-    display:table;overflow:hidden
+    display:table;
+    overflow:hidden;
+    align:center;
 }
 ul.list{
-    list-style-type:disc
+    list-style-type:disc;
+    align:center;
 }
 .project{
     color:#fff;
@@ -49,31 +59,38 @@ ul.list{
     margin:12px;
     padding:8px 12px 29px;
     font-size:16px;
-    box-shadow:0 2px 9px #0006
+    box-shadow:0 2px 9px #0006;
+    align:center;
 }
 ul.boxes{
-    display:table
+    display:table;
+    align:center;
 }
 div.box{
     width:100%;color:#fff;
     background-color:#2a2a2a;
     border-bottom:7px solid #444;
     margin:7px 7px 7px -6px;
+    align:center;
     padding:5px;font-size:16px;
     display:table;box-shadow:0 2px 9px #0006
 }
 div.box img{
-    margin:10px
+    margin:10px;
+    align:center;
 }
 img{
+    align:center;
     border-radius:8px
 }
 h1{
+    align:center;
     text-align:left;
     color:#f08080;
     font-size:24px
 }
 h2{
+    align:center;
     font-size:16px
 }
 a.button{
@@ -90,34 +107,40 @@ a.button{
     transition-duration:.3s
 }
 a.icon span{
+    align:center;
     padding-top:2px;
     padding-bottom:30px;
     padding-left:36px;
     background-repeat:no-repeat;
-    background-size:28px
+    background-size:28px, auto
+
 }
 a.button:hover{
     background-color:gray;
     box-shadow:0 0 16px #0006
 }
 .top{
+    align:center;
     width:0%;
     height:0%;
     position:relative;
     top:100px;
     left:0
 }
-.zoomer
-{cursor:pointer;
+.zoomer{
+    align:center;
+    cursor:pointer;
     max-height:300px;
     width:auto;
     height:auto;
     transition:all .2s
 }
 .zoomer:hover{
+    align:center;
     opacity:.8
 }
 .modal{
+    align:center;
     z-index:1;
     width:100%;
     height:100%;
@@ -129,6 +152,7 @@ a.button:hover{
     overflow:hidden
 }
 .modal-content{
+    align:center;
     max-width:80%;
     max-height:90%;
     width:auto;
@@ -143,18 +167,4 @@ a.button:hover{
 }
 @keyframes zoom{
     0%{transform:scale(0)}to{transform:scale(1)}
-}
-.close{
-    color:#f1f1f1;
-    font-size:70px;
-    font-weight:700;
-    transition:all .3s;
-    position:absolute;
-    top:25px;
-    right:45px
-}
-.close:hover,.close:focus{
-    color:coral;
-    cursor:pointer;
-    text-decoration:none
 }
